fixes spotlight width that is causing overflow along x axis

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,5 +21,7 @@
 
 
 body{
-background-color: black;
+  background-color: black;
+  max-width: 100%;
+  overflow-x: hidden;
 }
